test/spec_vectors/local_tee/fail/module_23.wat
(module (func $type-param-arg-empty-vs-num-in-return (param i32) (return (local.tee 0)) (drop)))